--- a/SistemaGestiónMédica/src/main/resources/application.properties
+++ b/SistemaGestiónMédica/src/main/resources/application.properties
@@ -1,1 +1,11 @@
-spring.application.name=demo
+spring.application.name=SistemaGestionMedica
+# Conexion MySQL
+spring.datasource.url=jdbc:mysql://localhost:3306/SistemaGestionMedica?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+# JPA Hibernate
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
